# inventory-stock-items

./: README.md  config.example.toml  logging_config_example.json  pyproject.toml
src/: auth_credentials_storage.py  config.py  dodo_is.py  enums.py  filters.py  http_clients.py  logger.py  main.py  mappers.py  new_types.py  units_storage.py
src/connections/: auth_credentials.py  dodo_is_api.py
src/context/: auth_credentials.py  dodo_is_api.py
src/dependencies/: auth_credentials.py  dodo_is_api.py
src/models/: __init__.py  dodo_is_api.py  events.py  inventory_stocks.py  units.py
src/new_types/: __init__.py  html.py  http_clients.py
src/parsers/: __init__.py  auth_credentials.py  dodo_is.py  dodo_is_api.py
