[tool.poetry]
name = "Inventory stocks items"
version = "1.0.0"
description = "Check and detect running out stocks"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stocks_balance"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.7.0"
faststream = {extras = ["rabbit"], version = "^0.5.2"}
sentry-sdk = "^1.45.0"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
